--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 }
 
 .main-nav {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 60px;
   background-color: rgb(244, 244, 244);
