--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
   background-color: rgb(244, 244, 244);
   border-bottom: 1px solid rgb(218, 218, 218);
   box-shadow: 0px 10px 16px rgba(199, 199, 199, 0.645);
+  display: flex;
 }
 
 .main-nav > ul {
@@ -37,7 +38,62 @@
   color: palevioletred;
 }
 
-@media (max-width: 380px) {
+
+.check {
+  display: none;
+}
+
+.hamburger-wrapper {
+  display: none;
+}
+
+.hamburger {
+  width: 40px;
+}
+
+@media (max-width: 420px) {
+  .check {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 15px;
+    width: 50px;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 2;
+  }
+  .hamburger-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 20px;
+  }
+
+  .main-nav {
+    justify-content: end;
+  }
+
+  .main-nav > ul {
+    display: none;
+  }
+
+  .check:checked + ul {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100vw;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: rgb(244, 244, 244);
+    box-shadow: 0px 10px 10px rgba(199, 199, 199, 0.645);
+  }
+}
+
+
+/* @media (max-width: 380px) {
   .nav-item {
     margin: 0;
   }
@@ -45,4 +101,4 @@
   .main-nav > ul {
     justify-content: space-around;
   }
-}
+} */
